Fix HTML encoding issues in admin-login.html

--- a/admin-login.html
+++ b/admin-login.html
@@ -148,8 +148,8 @@
     <script>
         // Simple admin authentication (in production, use Supabase Auth)
         const ADMIN_CREDENTIALS = {
-            username: 'admin',
-            password: 'admin123' // CHANGE THIS IN PRODUCTION!
+            username: 'Diansybextech',
+            password: 'gabriel_19*K' // CHANGE THIS IN PRODUCTION!
         };
         
         document.addEventListener('DOMContentLoaded', function() {
@@ -203,4 +203,5 @@
         });
     </script>
 </body>
+
 </html>
